{
    "name": "PlayerInput",
    "maps": [
        {
            "name": "MoveGrid",
            "id": "53d77562-4b48-46d7-9177-30dd18c81de7",
            "actions": [
                {
                    "name": "Up_Down",
                    "type": "Button",
                    "id": "a670c74b-b536-4de0-afdc-cd72dd82fb55",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Left_Right",
                    "type": "Button",
                    "id": "c0f8977d-8add-4951-ae65-a75314cf06a6",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "Up/Down",
                    "id": "b276f259-f0f5-4f72-95b2-d623e3577d9e",
                    "path": "1DAxis",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Up_Down",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "Negative",
                    "id": "54f04268-64c1-43ed-9aeb-86e42c613473",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Up_Down",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "Positive",
                    "id": "ecd8314b-2cf7-4f83-9ffb-0261d8dff982",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Up_Down",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "Left/Right",
                    "id": "f002d948-8db5-4904-8161-e12df428a61e",
                    "path": "1DAxis",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Left_Right",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "negative",
                    "id": "5e5cf9cd-8342-4631-a862-805a821762fb",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Left_Right",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "positive",
                    "id": "bcbd6f92-7890-44e9-9ffd-e980cc04bf95",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Left_Right",
                    "isComposite": false,
                    "isPartOfComposite": true
                }
            ]
        }
    ],
    "controlSchemes": []
}